--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+
+    <img src = "image.png" height = "50">
+
+    <div id = "footer">
+        <h2> < </h2>
+        <h3 id="title">CoolArt</h3>
+        <h2> ... </h2>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    
+    <div id= "stats">
+        <img id="pfp" src="https://crop-circle.imageonline.co/image.png" height="150">
+    
+        <img id="post1" src = "posts.png" height = "80">
+        <img id="followers1" src = "followers.png" height = "80">
+        <img id="following1" src = "following.png" height = "80">
+    </div>
+
+    <br>
+
+    <h4>Alex * Art</h4>
+    <p>Welcome to my page!</p>
+    <p>I repost famous paintings</p>
+    <p>Enjoy!</p>
+
+    <br>
+
+    <div id = "format">
+        <h4 id="followerButton"> <span style="background-color: lightskyblue">Follow </span></h4>
+        <h4 id="messageButton">Message</h4>
+        <h4 id="emailButton">Email</h4>
+    </div>
+
+    <img src = "image.png.webp" height="100">
+    <p> Random </p>
+
+    <br>
+    <br>
+
+    <div id = "tabs">
+        <img src = "table.png" height = "">
+        <img src = "TV.png" height = "">
+        <img src = "book.png" height = "">
+        <img src = "shared.png" height = "">
+    </div>
+
+    <img src = "line.png" height = "">
+
+    <br>
+    <br>
+
+    <div id= "images">
+        <img id="images1" src="images.jpeg" height="200" width="200">
+        <img id="images2" src="images-2.jpeg" height="200" width="200">
+        <img id="images3" src="images-3.jpeg" height="200" width="200">
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <div id = "footer">
+        <img src = "home.png" height = "70">
+        <img src = "search.jpeg" height = "70">
+        <img src = "plus.jpeg" height = "70">
+        <img src = "heart.jpeg" height = "70">
+        <img src = "https://crop-circle.imageonline.co/image.png" height = "70">
+    </div>
+
+</body>
+</html>
